--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.josefin{
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.themeColor{
+  background-color: #606060;
+}
